Setup leaderboard + analytics + cleanup

--- a/TODO
+++ b/TODO
@@ -4,4 +4,4 @@
 [x] Allow player move left and right to half of screen
 [] Set correct game parameters
 [] Allow negative scores
-[] Add leaderboard
+[x] Add leaderboard
